Tidy comments area on mobile fix #239

--- a/client/src/assets/scss/src/helpers/_mobile.scss
+++ b/client/src/assets/scss/src/helpers/_mobile.scss
@@ -246,7 +246,7 @@
 
 	.comments .comments-thread .comment .comment {
 		border-left: 5px solid $color-primary !important;
-		padding-left:5rem;
+		padding-left:1rem;
 	}
 
 	.comments .comments-thread .comment .comment-side {
